--- a/src/material/core/tokens/m2/mdc/_checkbox.scss
+++ b/src/material/core/tokens/m2/mdc/_checkbox.scss
@@ -3,20 +3,9 @@
 @use '../../../theming/theming';
 @use '../../../style/sass-utils';
 @use '../../token-utils';
-@use '@material/theme/theme-color' as mdc-theme-color;
 
 // The prefix used to generate the fully qualified name for tokens in this file.
 $prefix: (mdc, checkbox);
-
-// MDC logs a warning if the `contrast-tone` function is called with a CSS variable.
-// This function falls back to determining the tone based on whether the theme is light or dark.
-@function _contrast-tone($value, $is-dark, $light-color: '#fff', $dark-color: '#000') {
-  @if ($value == 'dark' or $value == 'light' or type-of($value) == 'color') {
-    @return if(mdc-theme-color.contrast-tone($value) == 'dark', $dark-color, $light-color);
-  }
-
-  @return if($is-dark, $light-color, $dark-color);
-}
 
 // Tokens that can't be configured through Angular Material's current theming API,
 // but may be in a future version of the theming API.
@@ -56,6 +45,7 @@ $prefix: (mdc, checkbox);
   $is-dark: map.get($config, is-dark);
   $foreground-base: theming.get-color-from-palette($foreground, base);
   $accent-default: theming.get-color-from-palette($accent, default);
+  $accent-default-contrast: theming.get-color-from-palette($accent, default-contrast);
   $disabled-color: theming.get-color-from-palette($foreground, base, 0.38);
   $selected-color: theming.get-color-from-palette($accent);
   $border-color: theming.get-color-from-palette($foreground, base, 0.54);
@@ -68,7 +58,7 @@ $prefix: (mdc, checkbox);
     // The color of the checkbox border when the checkbox is unselected and disabled.
     disabled-unselected-icon-color: $disabled-color,
     // The color of the checkmark when the checkbox is selected.
-    selected-checkmark-color: _contrast-tone($selected-color, $is-dark),
+    selected-checkmark-color: $accent-default-contrast,
     // The color of the checkbox fill when the checkbox is selected and focused.
     selected-focus-icon-color: $selected-color,
     // The color of the checkbox fill when the checkbox is selected and hovered.
